# ttbar

./: shell.nix  ttbar.cabal  versioncheck.hs
exe/: analysispol.hs
lib/HEP/Physics/TTBar/: Print.hs  Type.hs
lib/HEP/Physics/TTBar/Analysis/: PartonConstruction.hs  Polarization.hs  Separate.hs  TopPairParton.hs  XSection.hs
lib/HEP/Physics/TTBar/Model/: HeavyHiggs.hs
src/HEP/Physics/: TTBar.hs
src/HEP/Physics/TTBar/: Analysis.hs  CutSets.hs  Cuts.hs  Error.hs  FileWork.hs  TaskManager.hs  Test.hs  Type.hs
src/HEP/Physics/TTBar/Analysis/: Combined.hs  Polarization.hs  Separate.hs  XSection.hs
src/HEP/Physics/TTBar/Analysis/MonteCarlo/: Plain.hs  Vegas.hs
src/HEP/Physics/TTBar/Model/: Exotic.hs  Mandelstam.hs  SM.hs
src/HEP/Physics/TTBar/Reconstruction/: Combined.hs  Hadronic.hs  Leptonic.hs
src/HEP/Physics/TTBar/Tester/: XSecTester.hs
src/HEP/Physics/TTBar/Tester/XSecTester/: Common.hs  Parton.hs  Proton.hs
template/: document.tex.st  partonlevelcompare.tex.st
test/: test.hs
